package com.project.id4you.common

object TestTags {
    const val NAVIGATE_TO_LOGIN_BUTTON = "NavigateToLogin"
    const val NAVIGATE_TO_REGISTRATION_BUTTON = "NavigateToRegistration"
    const val REGISTRATION_SCREEN = "RegistrationScreen"
    const val LOGIN_SCREEN = "LoginScreen"
    const val LOGIN_SCREEN_EMAIL_INPUT = "LoginEmailInput"
    const val LOGIN_SCREEN_PASSWORD_INPUT = "LoginPasswordInput"
    const val REGISTRATION_SCREEN_EMAIL_INPUT = "RegistrationEmailInput"
    const val REGISTRATION_SCREEN_PASSWORD_INPUT = "RegistrationPasswordInput"
    const val REGISTRATION_SCREEN_PASSWORD_CONFIRM_INPUT = "RegistrationPasswordConfirmInput"
    const val REGISTRATION_SCREEN_NAME_INPUT = "RegistrationNameInput"
    const val REGISTRATION_SCREEN_SURNAME_INPUT = "RegistrationSurnameInput"
    const val REGISTRATION_SCREEN_BIRTH_DATE_INPUT = "RegistrationBirthDateInput"
    const val REGISTRATION_SCREEN_PERSONAL_CODE_INPUT = "RegistrationPersonalCodeInput"
    const val SIGN_UP_BUTTON = "SignUpButton"
    const val LOGIN_BUTTON = "LoginButton"
    const val DOCUMENT_LIST_SCREEN = "DocumentListScreen"
    const val DOCUMENT_LIST_HEADER = "DocumentListHeader"
    const val DOCUMENT_LIST = "DocumentList"
    const val ID_CARD = "IdCard"
    const val SCAN_BUTTON = "ScanButton"
    const val FORGOT_PASSWORD_BUTTON = "ForgotPasswordButton"
    const val LOADING_COMPONENT = "LoadingComponent"
    const val ERROR_MESSAGE = "ErrorMessage"
    const val CONTINUE_BUTTON = "Continue"
    const val ADD_BUTTON = "Add"
    const val SETTINGS_BUTTON = "Settings"
    const val FILTER_BUTTON = "Filter"
    const val DOCUMENT_CREATION_SCREEN_NAME_FIELD = "CustomDocumentNameField"
    const val DROPDOWN_FIELD = "DropdownField"
    const val DOCUMENT_CREATION_SCREEN = "DocumentCreationScreen"


    //tags for DocumentQrScreen
    const val DOCUMENT_QR_SCREEN = "DocumentQrScreen"
    const val DOCUMENT_QR_HEADER = "DocumentQrHeader"
    const val DOCUMENT_QR_SCAN_INSTRUCTIONS = "DocumentQrScanInstructions"
    const val DOCUMENT_QR_ERROR = "DocumentQrError"
    const val DOCUMENT_QR_CODE_IMAGE = "DocumentQrCodeImage"
    const val DOCUMENT_QR_TIME_REMAINING = "DocumentQrTimeRemaining"
    const val DOCUMENT_QR_REGENERATE_BUTTON = "DocumentQrRegenerateButton"
}
